--- a/app.wxss
+++ b/app.wxss
@@ -1,4 +1,11 @@
 /**app.wxss**/
+.rounded{
+  overflow: hidden;
+  border-radius: 10rpx;
+  -webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC);
+}
+
+
 .Herald-basis{
   display:flex;
   flex-direction: column;
