--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -2,7 +2,7 @@
 
 
 <view class="Herald-basis">
-<!--有关swiper写在这一部分的参数最好不要再动，因为圆角是用图片遮盖实现的-->
+
 
   <swiper class="rounded" style="width:660rpx;height:264rpx;"  autoplay="true" interval="5000" duration="500" circular="true">
   <block wx:for="{{swiperItem}}">
@@ -20,10 +20,9 @@
 
 
 
-
 <!--重复渲染的卡片部分-->
 <block wx:for="{{modules}}" wx:key="id">
-<view class="Herald-module">
+<view class="Herald-module" style="order:{{item.id}}">
     <!--卡片标题-->
     <view class="Herald-module-title">
       <image class="Herald-module-title-icon" src="../../module/{{item.name}}/res/icon.png"></image>
@@ -57,8 +56,6 @@
 </view>
 <!--卡片到此结束-->
 </block>
-
-
 
 
 </view>
