--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,62 +1,2 @@
-<!--index.wxml-->
-
-
-<view class="Herald-basis">
-
-
-  <swiper class="rounded" style="width:660rpx;height:264rpx;"  autoplay="true" interval="5000" duration="500" circular="true">
-  <block wx:for="{{swiperItem}}">
-      <swiper-item bindtap="{{item.func}}">  
-      <image style="width:700rpx;height:350rpx;"  src="{{item.src}}" />
-      </swiper-item>
-  </block>
-  </swiper>
-
-  <!--swiper到此结束-->
-
-</view>
-
-<view class="Herald-basis" style="position:relative;top:3rpx;">
-
-
-
-<!--重复渲染的卡片部分-->
-<block wx:for="{{modules}}" wx:key="id">
-<view class="Herald-module" style="order:{{item.id}}">
-    <!--卡片标题-->
-    <view class="Herald-module-title">
-      <image class="Herald-module-title-icon" src="../../module/{{item.name}}/res/icon.png"></image>
-      
-      <!--标题-->
-      <text class="Herald-module-title-text">{{item.title}}</text>
-      <!--/标题/-->
-
-      <!--逼死强迫症的小红圈和小红点-->
-      <block wx:if="{{item.popnumber[0]}}">
-        <view class="Herald-module-title-red-number">{{item.popnumber[1]}}</view>
-      </block>
-      <block wx:if="{{item.popdot}}">
-      <view class="Herald-module-title-red-dot"></view>
-      </block>
-      <!--/逼死强迫症的小红圈和小红点/-->
-    </view>
-    <!--/卡片标题/-->
-    <!--副标题-->
-      <view class="Herald-blank" style="position:relative;left:-16rpx"></view>
-      <view class="Herald-module-subtitle">
-      <text>{{item.subtitle}}</text>
-    </view>
-    <!--/副标题-->
-
-    <view class="Herald-blank" stayle="width:15rpx;position:relative;left:-16rpx"></view>
-    <include src="../../module/Template/res/insert.wxml"/>
-    <view class="Herald-blank" style="width:15rpx;position:relative;left:-16rpx"></view>
-    <view class="Herald-line" style="position:relative;left:-20rpx"></view>
-    <view class="Herald-blank" style="width:15rpx;position:relative;left:-16rpx"></view>
-</view>
-<!--卡片到此结束-->
-</block>
-
-
-</view>
-
+<text>Hello, World</text>
+ 
