--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,4 @@
 @import "/templates/comp_searchbar.wxss";
 @import "/templates/comp_slider.wxss";
+@import "/templates/comp_dashboard.wxss";
 @import "/templates/comp_login.wxss";
