--- a/templates/comp_searchbar.wxml
+++ b/templates/comp_searchbar.wxml
@@ -3,4 +3,7 @@
         <image class="icon" src="/images/ic_searchbar.png" mode="aspectFit"/>
         <text class="hint">搜索数据和日程</text>
     </view>
+    <image class="icon" src="/images/ic_user.png" mode="aspectFit"
+        catchtap="go" data-to="user"/>
 </searchbar>
+<view class="sticky-line"></view>
