--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,5 @@
 @import "/templates/comp_searchbar.wxss";
 @import "/templates/comp_slider.wxss";
 @import "/templates/comp_dashboard.wxss";
+@import "/templates/comp_schedule.wxss";
 @import "/templates/comp_login.wxss";
