--- a/templates/comp_searchbar.wxss
+++ b/templates/comp_searchbar.wxss
@@ -32,7 +32,7 @@ searchbar .hint {
     width: 100%;
     height: 1rpx;
     top: 0;
-    background: #e4e4e4;
+    background: #ddd;
     position: sticky;
     position: -webkit-sticky;
     z-index: 9999;
