--- a/templates/comp_schedule.wxss
+++ b/templates/comp_schedule.wxss
@@ -1,4 +1,4 @@
-.subtitle {
+schedule .subtitle {
     padding: 15rpx 30rpx;
     background: #f7f7f7;
     display: flex;
@@ -10,15 +10,58 @@
     z-index: 999;
 }
 
-.subtitle image {
+schedule .subtitle image {
     width: 32rpx;
     height: 32rpx;
 }
 
-.subtitle text {
+schedule .subtitle text {
     margin-left: 20rpx;
     font-size: 26rpx;
     color: #666;
+}
+
+schedule .error {
+    padding: 15rpx 30rpx;
+    background: #fafaa8;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+}
+
+schedule .error:active {
+    background: #b8b80d;
+}
+
+schedule .error image {
+    width: 32rpx;
+    height: 32rpx;
+}
+
+schedule .error text {
+    margin-left: 20rpx;
+    font-size: 26rpx;
+    padding: 20rpx;
+    color: rgba(0, 0, 0, .7);
+}
+
+schedule button.loading {
+    background: none;
+    font-size: 26rpx;
+    color: #aaa;
+    padding: 20rpx;
+    background: #f7f7f7;
+    border-radius: 0 !important;
+}
+
+schedule button.loading:before,
+schedule button.loading:after {
+    border: none;
+    border-radius: 0 !important;
 }
 
 schedule item {
@@ -59,6 +102,11 @@ schedule item .line {
     justify-content: stretch;
 }
 
+schedule item .going-on:before {
+    content: "进行中 ";
+    color: #f2800d;
+}
+
 schedule item .top-line {
     margin-bottom: 5rpx;
     opacity: .5;
@@ -79,6 +127,10 @@ schedule item .top-right,
 schedule item .bottom-left {
     font-size: 26rpx;
     color: #666;
+}
+
+schedule item .bottom-left {
+    flex-shrink: 0;
 }
 
 schedule item .bottom-right {
