--- a/templates/comp_searchbar.wxss
+++ b/templates/comp_searchbar.wxss
@@ -3,6 +3,7 @@ searchbar {
     flex-direction: row;
     align-items: center;
     padding: 13rpx;
+    border-bottom: 1rpx solid #ddd;
 }
 
 searchbar .inner {
@@ -26,14 +27,4 @@ searchbar .hint {
     font-size: 26rpx;
     margin: 14rpx 0;
     color: #818181;
-}
-
-.sticky-line {
-    width: 100%;
-    height: 1rpx;
-    top: 0;
-    background: #ddd;
-    position: sticky;
-    position: -webkit-sticky;
-    z-index: 9999;
 }
