--- a/app.wxss
+++ b/app.wxss
@@ -70,10 +70,15 @@ contact-button:after {
   pointer-events: none;
 }
 
+space {
+  flex-grow: 1;
+}
+
 /*
   Material Design 风格的浮动动作按钮（Floating Action Button）
+  可以使用<fab>，也可用<button class="fab">以兼容表单
 */
-fab {
+fab, .fab {
   position: fixed;
   right: 40rpx;
   bottom: 40rpx;
@@ -88,7 +93,8 @@ fab {
 }
 
 /* 加号的横 */
-fab::before {
+fab::before,
+.fab::before {
   content: ' ';
   position: absolute;
   display: block;
@@ -101,7 +107,18 @@ fab::before {
 }
 
 /* 加号的竖 */
-fab::after {
+fab::after, 
+.fab::after {
+
+  /* 清除 button::after 原有样式 */
+  top: initial;
+  left: initial;
+  border: none;
+  transform: none;
+  border-radius: none;
+  box-sizing: initial;
+  transform-origin: initial;
+
   content: ' ';
   position: absolute;
   display: block;
@@ -114,17 +131,20 @@ fab::after {
 }
 
 /* 叉的第一笔 */
-fab.close::before {
+fab.close::before, 
+.fab.close::before {
   -webkit-transform: rotate(45deg);
 }
 
 /* 叉的第二笔 */
-fab.close::after {
+fab.close::after, 
+.fab.close::after {
   -webkit-transform: rotate(45deg);
 }
 
 /* 对勾的第一笔 */
-fab.confirm::before {
+fab.confirm::before, 
+.fab.confirm::before {
   -webkit-transform: rotate(45deg);
   right: 58rpx;
   bottom: 44rpx;
@@ -132,7 +152,8 @@ fab.confirm::before {
 }
 
 /* 对勾的第二笔 */
-fab.confirm::after {
+fab.confirm::after, 
+.fab.confirm::after {
   -webkit-transform: rotate(45deg);
   right: 46rpx;
   bottom: 30rpx;
@@ -140,19 +161,23 @@ fab.confirm::after {
 }
 
 /* Material 点击效果 */
-fab:active {
+fab:active, 
+.fab:active {
   background: #008dad;
   /*box-shadow: 0 2rpx 4rpx rgba(2, 0, 33, .2);*/
   -webkit-transition: .25s;
 }
 
 /* fab 支持 hidden 属性，可动态显示或隐藏 */
-fab.hidden {
+fab.hidden, 
+.fab.hidden {
   bottom: -120rpx;
 }
 
 /* hidden 状态下加号半透明 */
 fab.hidden::before,
-fab.hidden::after {
+fab.hidden::after, 
+.fab.hidden::before,
+.fab.hidden::after {
   opacity: 0;
 }
